# MoneyRepair

./: .gitignore  CHANGELOG.md  CLEANUP.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: acquisition_flow.json  acquisition_flow.vsdx  github.md  operator_loop.json  operator_loop.vsdx  pipeline.md  pipeline_diagram.json  pipeline_diagram.vsdx  release.md  search_logic.json  search_logic.vsdx  stage4_convergence_report.md  tearfit_research.md  v1_5_experiments.md  v2_0_industrial_algorithm.md  v2_5_scientific_reporting.md  v3_0_chimera_discrimination.md  v4_0_algorithm_deduction.md  v4_0_production_reconstruction.md  v4_1_pressure_realism.md
docs/figures/: make_figures.py
src/moneyrepair/: __init__.py  batch.py  benchmark.py  cli.py  compat.py  diagnostics.py  diagrams.py  features.py  figures.py  fingerprint.py  ingest.py  interlock.py  labels.py  llm_control.py  locator.py  pipeline.py  policy_compare.py  pressure.py  quality.py  realism.py  reference.py  reports.py  scan.py  simulate.py  solver.py  style.py  tearfit.py  types.py  v6_to_v10.py  vision.py  visualize.py
src/moneyrepair/baselines/: __init__.py  features.py  fingerprint.py  interlock.py  vision.py
src/moneyrepair/experimental/: __init__.py  llm_control.py  policy_compare.py  v6_to_v10.py
tests/: conftest.py  test_audit.py  test_batch.py  test_benchmark.py  test_chimera.py  test_compat.py  test_compat_fast.py  test_diagrams.py  test_features.py  test_figures.py  test_ingest_reference.py  test_interlock.py  test_labels.py  test_llm_control.py  test_locator.py  test_locator_hybrid.py  test_pipeline.py  test_policy_compare.py  test_quality.py  test_realism.py  test_reports.py  test_scan.py  test_solver.py  test_solver_performance.py  test_tearfit.py  test_v6_to_v10.py  test_vision.py  test_visualize.py
