[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyrepair"
version = "2.5.0"
description = "Simulation toolkit for banknote fragment compatibility search."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["computer-vision", "fragments", "reconstruction", "simulation", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
reports = [
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/"
Documentation = "https://github.com/"
Issues = "https://github.com/"

[project.scripts]
moneyrepair = "moneyrepair.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
